--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,7 @@ h6 {
   padding: 0;
 }
 
+
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
@@ -153,6 +154,7 @@ h6 {
   align-items: center;
   text-transform: uppercase;
   justify-content: center;
+  font-style: italic;
 }
 
 #header #logo h1 {
@@ -439,7 +441,7 @@ font-size: 13px;
   left: 0;
   right: 0;
   z-index: 10;
-  display: flex;
+  display: flex;  
   justify-content: center;
   align-items: center;
   flex-direction: column;
@@ -454,7 +456,7 @@ font-size: 13px;
 }
 
 #hero .hero-content h2 span {
-  color: #50d8af;
+  color: #0c2e8a;
   text-decoration: underline;
 }
 
@@ -1281,7 +1283,7 @@ section {
 }
 
 #contact .php-email-form button[type=submit] {
-  background: #50d8af;
+  background: #0c2e8a;
   border: 0;
   border-radius: 3px;
   padding: 10px 30px;
@@ -1291,7 +1293,7 @@ section {
 }
 
 #contact .php-email-form button[type=submit]:hover {
-  background: #2dc899;
+  background: #345bc5;
 }
 
 @-webkit-keyframes animate-loading {
@@ -1465,11 +1467,12 @@ margin-left: 2rem;
 
 .learnmore {
   padding: 0.5rem;
-  border: 3px solid #18d26e;
+  border: 3px solid #147a14;
   height: fit-content;
   background-color: #fff;
   width: 100%;
-  color: #18d26e;
+  font-weight: 600;
+  color: #147a14;
   border-radius: 5%;
   transition: all 0.3s linear;
 }
@@ -1487,52 +1490,16 @@ margin-left: 2rem;
 }
 
 .process_step {
-  display: flex;
-  width: 1300px;
-  height: 60px;
+  display: grid;
+  grid-template-columns: 50px auto 50px;
+  column-gap: 10px;
+  width: 100%;
+  height: min-content;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 20px;
-  margin-bottom: 20px;
-
+  margin-top: 40px;
+  margin-bottom: 40px;
   text-align: center;
-}
-
-@media (max-width: 1500px) {
-
-  .process_step {
-    display: flex;
-    width: auto;
-    /* height: 60px; */
-    font-size: 24px;
-    line-height: 1.5;
-    margin-top: auto;
-    margin-bottom: 20px;
-    height: min-content;
-  }
-
-  /* .cyzyk::after {
-    display: none;
-    content: none;
-
-  } */
-
-  .process_no {
-    display: flex;
-    width: 40px;
-    height: 40px;
-    padding: 0.5rem;
-    font-size: 20px;
-    font-weight: 600;
-    border-radius: 50%;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .process_item {
-    font-weight: 400;
-  }
 }
 
 .process_step:hover .process_no {
@@ -1543,16 +1510,17 @@ margin-left: 2rem;
 
 .process_no {
   display: flex;
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   border: #147a14 solid 1px;
+  color: #147a14;
   padding: 0.5rem;
   font-size: 20px;
   font-weight: 600;
-  border-radius: 50%;
+  border-radius: 25px;
   text-align: center;
   justify-content: center;
-  align-items: center;
+  align-self: center;
   transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
@@ -1561,8 +1529,11 @@ margin-left: 2rem;
   margin-left: 2rem;
   text-align: left;
   justify-content:flex-start;
+  color: rgba(17, 17, 17, 0.863);
   align-self: auto;
   font-weight: 500;
+  font-size: 22px;
+  font-style: italic;
 }
 
 .process_icon {
@@ -1571,6 +1542,23 @@ margin-left: 2rem;
   display: flex;
   margin-left: 10px;
   margin-right: 10px;
+  align-self: center;
+}
+
+@media (max-width: 769px) {
+.process_step {
+  height: min-content;
+  margin-bottom: 2rem;
+}
+.process_icon {
+  display: flex;
+  text-align: center;
+  align-self: center;
+}
+.process_no {
+  display: flex;
+  align-self: center;
+}
 }
 
 .whywe {
@@ -1599,4 +1587,23 @@ margin-left: 2rem;
   background-color: #147a14;
   color: #18d26e;
   fill: #147a14;
+}
+
+.slogan h2 {
+  position: absolute;
+  top: 15%;
+  left: 5%;
+  text-transform: uppercase;
+  font-style: italic;
+}
+
+
+.slogan h2 span {
+  font-size: larger;
+  font-weight: 700;
+}
+
+* h2,
+* h3 {
+  font-style: italic;
 }
