--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: green;
+  background: darkblue;
   width: 40px;
   height: 40px;
   transition: all 0.4s;
@@ -69,7 +69,7 @@ h6 {
 }
 
 .back-to-top:hover {
-  background: #71dfbe;
+  background: lightslategrey;
   color: #fff;
 }
 
@@ -1378,7 +1378,7 @@ section {
 
 /* Style the front side */
 .flip-box-front {
-  background-color: #71d7ff;
+  background-color: gray;
   color: black;
   display: flex;
   align-items: center;
@@ -1386,8 +1386,11 @@ section {
 
 /* Style the back side */
 .flip-box-back {
-  background-color: dodgerblue;
-  color: white;
+  background-color: white;
+  box-shadow: 1px 5px 12px 1px lightgray;
+  color: black;
+  font-style: italic;
+  max-width: 50ch;
   transform: rotateY(180deg);
   padding: 0.5rem;
 }
@@ -1518,6 +1521,7 @@ margin-left: 2rem;
   font-size: 20px;
   font-weight: 600;
   border-radius: 25px;
+  font-weight: 600;
   text-align: center;
   justify-content: center;
   align-self: center;
@@ -1531,7 +1535,7 @@ margin-left: 2rem;
   justify-content:flex-start;
   color: rgba(17, 17, 17, 0.863);
   align-self: auto;
-  font-weight: 500;
+  font-weight: 550;
   font-size: 22px;
   font-style: italic;
 }
