--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,7 +106,7 @@ h6 {
 }
 
 #topbar .contact-info i a:hover {
-  color: #50d8af;
+  color: green;
 }
 
 #topbar .social-links a {
@@ -247,7 +247,8 @@ font-size: 13px;
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover>a {
-  color: #50d8af;
+  color: green;
+  /* transform: scale(1.05); */
 }
 
 .navbar .dropdown ul {
@@ -500,6 +501,18 @@ font-size: 13px;
   color: #50d8af;
 }
 
+/* Wave effect after slider */
+
+.curved {
+  position: relative;
+  height: 50vh;
+  border-bottom-left-radius: 50% 18%;
+  border-bottom-right-radius: 50% 18%;
+  border-bottom: solid 16px black;
+}
+
+
+
 #hero .hero-slider {
   z-index: 8;
   height: 80vh;
@@ -555,8 +568,8 @@ section {
   position: absolute;
   display: block;
   width: 50px;
-  height: 3px;
-  background: #50d8af;
+  height: 4px;
+  background: darkblue;
   bottom: 0;
   left: 0;
 }
@@ -647,6 +660,7 @@ section {
   }
 }
 
+
 #about .content h2 {
   color: #0c2e8a;
   font-weight: 700;
@@ -657,8 +671,9 @@ section {
 #about .content h3 {
   color: rgb(12, 46, 138);
   font-weight: 400;
-  font-size: 18px;
-  line-height: 26px;
+  font-size: 24px;
+  max-width: 50char;
+  line-height: 1.5;
   font-style: italic;
 }
 
@@ -1175,7 +1190,8 @@ section {
   margin-bottom: 15px;
   font-weight: bold;
   text-transform: uppercase;
-  color: #999;
+  /* color: #999; */
+color: #333;
 }
 
 #contact .contact-info a {
@@ -1183,7 +1199,8 @@ section {
 }
 
 #contact .contact-info a:hover {
-  color: #50d8af;
+  color: red;
+  font-weight: bolder;
 }
 
 #contact .contact-address,
@@ -1378,7 +1395,7 @@ section {
 
 /* Style the front side */
 .flip-box-front {
-  background-color: gray;
+  background-color: lightgrey;
   color: black;
   display: flex;
   align-items: center;
