--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 a {
-  color: #50d8af;
+  color: green;
   text-decoration: none;
   transition: 0.5s;
 }
@@ -1493,7 +1493,7 @@ margin-left: 2rem;
   width: 100%;
   font-weight: 600;
   color: #147a14;
-  border-radius: 5%;
+  border-radius: 4px;
   transition: all 0.3s linear;
 }
 
