--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -253,7 +253,7 @@ font-size: 15px;
   justify-content: space-between;
   padding: 10px 0 10px 30px;
   font-family: "Raleway", sans-serif;
-  font-size: 15px;
+  font-size: 18px;
   font-weight: 600;
   color: #002047;
   white-space: nowrap;
@@ -267,9 +267,9 @@ font-size: 15px;
   margin-left: 5px;
 }
 
-.navbar a:hover,
-.navbar .active,
-.navbar .active:focus,
+#navbar a:hover,
+#navbar .active,
+#navbar .active:focus,
 .navbar li:hover>a {
   color: green;
   /* transform: scale(1.05); */
@@ -667,12 +667,27 @@ section {
 
 #about .about-img {
   overflow: hidden;
+  display: flex;
 }
 
 #about .about-img img {
   margin-left: -15px;
   max-width: 95%;
+  height: auto;
   margin-top: 30px;
+}
+
+@media (max-width:1436px) and (min-width:992px) {
+  #about .about-img img {
+    /* margin-top: 20px; */
+    max-width: 100%;
+    height: max-content;
+    margin-left: 1px;
+    display: flex;
+    align-self: center;
+  }
+
+  
 }
 
 @media (max-width: 768px) {
@@ -1684,7 +1699,7 @@ margin-left: 2rem;
 {
     content: '\2713';
     display: inline-block;
-
+    font-weight: 700;
     color: green;
     padding: 0 6px 0 0;
     margin-right: 0.6rem;
