--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1535,9 +1535,9 @@ margin-left: 2rem;
   margin-left:2rem;
 }
 
-.learnmore {
+/* .learnmore {
   display:flex;
-  position:absolute;
+  position:relative;
   padding: 0.5rem;
   border: 1px solid var(--color-button);
   min-height:max-content;
@@ -1555,7 +1555,7 @@ margin-left: 2rem;
   border: 1px solid var(--color-button-hover);
   background-color: var(--color-button-hover);
   color: #fff;
-}
+} */
 
 .process {
   display: block;
@@ -1683,6 +1683,10 @@ margin-left: 2rem;
   font-style: italic;
 }
 
+.section-header h2 {
+  font-style: normal;
+}
+
 .works {
   display: block;
 }
@@ -1711,3 +1715,53 @@ margin-left: 2rem;
     font-size: 1.5em;
 }
 
+#work .summary {
+  color: var(--color-blue);
+  margin-top: 2rem;
+  line-height: 1.5;
+  letter-spacing: 1px;
+  word-break: keep-all;
+}
+
+#work .summary::first-letter {
+  margin-left: 1.5rem;
+
+}
+
+.container .learnmore {
+  display: flex;
+  position: relative;
+}
+
+.learnmore {
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: center;
+  padding: 0.5rem;
+  border: 1px solid var(--color-button);
+  min-height:max-content;
+  background-color: var(--color-button);
+  width: max-content;
+  text-align:center;
+  align-items: center;
+  font-weight: 600;
+  color:#fff;
+  border-radius: var(--border-radius-button);
+  transition: all 0.3s linear;
+}
+
+.learnmore:hover {
+  border: 1px solid var(--color-button-hover);
+  background-color: var(--color-button-hover);
+  color: #fff;
+}
+
+.karobka {
+  display: flex;
+  width: 40%;
+  border: #000 solid 2px;
+  padding: 1rem;
+  margin-left: auto;
+  margin-right: auto;
+  box-shadow: 1px 5px 12px 1px rgb(156, 155, 155);  
+}
