--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1804,31 +1804,59 @@ margin-left: 2rem;
   margin: 40px 0;
 }
 
-
+/* TODO:*/
+/* About page HOW WE WORK SECTION STYLES */
 .container2 {
   width: 95%;
   margin-left: auto;
-    margin-right: auto;
-    display: block;
+  margin-right: auto;
+  display: block;
   }
   
 .grid-5x1 {
   display: grid;
   grid-template-columns:18% 18% 18% 18% 18%;
   column-gap: 2%;
+
+
+}
+
+.vertical-grid {
+  display: grid;
+  grid-template-rows: 25% 30% 45%;
+  row-gap: 1rem;
+  width: 100%;
+}
+.work-icons {
+  display: flex;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+
 }
 
 .shapes {
-  width:100%;
-  height: 10rem;
-  background-color:tomato;
   display: flex;
   align-items: center;
   justify-content: center;
+  width:100%;
+  height: 100%;
+  background-color:tomato;
   clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);}
 
   .shape_text {
+    display: flex;
     margin-left: 1.5rem;
     font-size: 1.8rem;
     font-weight: 600;
+  }
+
+  .work-chart-info {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width:100%;
+    height: 100%;
+    background-color:lightgreen;
+
   }
