--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1813,63 +1813,93 @@ margin-left: 2rem;
   display: block;
   }
   
-.grid-5x1 {
-  display: grid;
-  grid-template-columns: repeat(5, 18%);
-  column-gap: 2%;
-  width: 100%;
-}
-
-@media (max-width: 1600px) {
   .grid-5x1 {
-    grid-template-columns:repeat(3, 30%);
-    column-gap: 3%;
-    justify-items: center;
-    
+    display: grid;
+    grid-template-columns: repeat(5, 18%);
+    column-gap: 2%;
+    width: 100%;
+    height: 50vh;
+    /* background-color: lightgreen; */
+    /* border: solid 2px blue; */
   }
 
+  .guty {
+    display: grid;
+    grid-template-rows: 15% 15% auto;
+    row-gap: 3%;
+    width: 100%;
+    height: 100%;
+    /* background-color: #5f86f33b; */
+    /* border: brown 3px solid; */
+    justify-items: center;
+    align-items: center;
+    overflow: hidden;
+  }
+
+  .ikonki {
+    width: 100%;
+    height: 100%;
+    /* background-color: green; */
+    /* border: #000 2px solid; */
+    display: flex;
+    justify-content: center;
+    align-content: center;
+  }
+
+  .surat {
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    width: auto;
+    height: 100%;
+  }
+    
   .shapes {
     display: flex;
-    justify-content: space-between;
-    margin-bottom: 2rem;
+    justify-content: center;
     align-items: center;
-    margin-left: auto;
-    margin-right: auto;
+    color: white;
+    height: 100%;
+    width: 100%;
+    font-size: 1.5rem;
+    font-weight: 500;
+    background-color:var(--color-background-main);
+    transition: all 0.3s;
+    clip-path: polygon(95% 0%, 100% 50%, 95% 100%, 0% 100%, 5% 50%, 0% 0%);
   }
-  
-  .dogovor {
-    font-size: 10px;
+
+  .work-chart-text {
+    width: 100%;
+    height: 100%;
+    font-size: 1rem;
+    /* border: orangered 2px solid; */
+    padding: 0.2rem 0.3rem;
   }
 
-}
+  @media (max-width:900px) {
+    .work-chart-text {
+      /* font-size: larger; */
+      display: none;
+    }
 
-.dogovor {
-  font-size: 1.6rem;
-}
+    .guty {
+      display: grid;
+      grid-template-rows: 4rem 4rem;
+      /* height: 500px; */
+      width: 100%;
+    }
 
+    .grid-5x1 {
+      height: 10rem;
+    }
 
+    .shapes {
+      font-size: 0.8rem;
+    }
+  }
 
-.shapes {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: blue;
-  height: 5rem;
-  width: 95%;
-  font-size: 1.5rem;
-  font-weight: 500;
-  background-color:rgba(255, 166, 0, 0.795);
-  clip-path: polygon(95% 0%, 100% 50%, 95% 100%, 0% 100%, 5% 50%, 0% 0%);
-}
-
-.shapes:nth-child(even) {
-  background-color: rgba(0, 128, 0, 0.514);
-}
-
-.shapes:nth-child(3) {
-  background-color: rgba(255, 0, 0, 0.699);
-}
-
-.shapes:last-child {
-  background-color: rgba(165, 42, 42, 0.616);
-}
+   .shapes:hover {
+    color: var(--color-header);
+    background-color: var(--color-button-hover);
+    transform: scale(0.95);
+  }
