--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1903,3 +1903,7 @@ margin-left: 2rem;
     background-color: var(--color-button-hover);
     transform: scale(0.95);
   }
+
+  #service-page {
+    padding: 30px 0 10px 0;
+  }
