--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1954,14 +1954,21 @@ ol img {
 }
 
 .balykcylyk {
-  display: flex;
+  display: block;
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+  /* margin-top: 1rem;
+  margin-bottom: 1rem; */
   padding: 1rem;
   width: 100vw;
+}
+
+.aciklama {
+  display: block;
+  padding-top: 0.8rem;
+  color: var(--color-primary);
+
 }
 
 .column {
