--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1986,9 +1986,9 @@ ol img {
   display: table;
 }
 
-.kletka {
-  /* border: grey solid 1px; */
-}
+/* .kletka {
+  border: grey solid 1px;
+} */
 
 /* .sunshine {
   content: url(/images/wintery-sunburst2.svg); */
