--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2004,19 +2004,18 @@ ol img {
 }
 
 table, td {
-  border: solid 1px grey;
-  border-collapse: collapse;
+  color: var(--color-blue);
   margin-top: 2rem;
   margin-bottom: 2rem;
-  color: var(--color-blue);
-  margin-left: auto;
-  margin-right: auto;
-  padding: 0.5rem;
 }
 
-th {
-  border: solid 1px grey;
+th[scope=col] {
+  color: var(--color-blue);
   font-size: larger;
   font-weight: bolder;
-  padding: 0.8rem;
+}
+
+th[scope=row] {
+  color: var(--color-blue);
+  text-align: end;
 }
