--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -671,12 +671,12 @@ section {
   z-index: 1;
 }
 
-.sunshine {
+/* .sunshine {
   background-image: url(/images/logo\ with\ sunshine.jpg);
   background-repeat: no-repeat;
   background-position:center;
   background-size: contain;
-}
+} */
 
 @media (max-width: 1436px) and (min-width: 992px) {
   #about .about-img img {
@@ -1476,7 +1476,6 @@ position: relative;
 
 .kart__surat img {
   position: absolute;
-  opacity: 0.6;
   left: 0px;
   width: 100%;
   height: 100%;
@@ -1686,7 +1685,9 @@ position: relative;
   top: 15%;
   left: 5%;
   text-transform: uppercase;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-style: italic;
+  background-color: rgba(13, 61, 194, 0.233);
 }
 
 #hero .slogan h2 span {
@@ -2034,7 +2035,6 @@ th[scope=row] {
   display: flex;
   flex-direction: column;
   width: 33.3%;
-
   gap: 20px;
 }
 
@@ -2057,4 +2057,9 @@ th[scope=row] {
   .setir {
     width: 100%;
   }
+}
+
+.ramka {
+  width:100%;
+  border: 0.5px dotted rgba(128, 128, 128, 0.603); 
 }
