--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -471,21 +471,63 @@ h6 {
 }
 
 #hero .hero-content h2 {
-  color: var(--color-hero);
+  /* color: var(--color-logo); */
   margin-bottom: 30px;
   font-size: 35px;
   font-weight: 700;
 }
 
 #hero .hero-content h2 span {
-  color: var(--color-hero);
+  /* color: var(--color-hero); */
   text-decoration: capitalize;
 }
 
-@media (max-width: 767px) {
-  #hero .hero-content h2 {
-    font-size: 34px;
+
+.slogan h2 {
+  position: absolute;
+  top: 5%;
+  text-transform: uppercase;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-style: italic;
+  color: white;
+  text-shadow: 1px 1px 1px #919191,
+    1px 2px 1px #919191,
+    1px 3px 1px #919191,
+    1px 4px 1px #919191,
+    1px 5px 1px #919191,
+    1px 6px 1px #919191,
+    1px 7px 1px #919191,
+    1px 8px 1px #919191,
+    1px 9px 1px #919191,
+    1px 10px 1px #919191,
+  1px 18px 6px rgba(16, 16,16,0.4),
+  1px 22px 10px rgba(16, 16,16,0.4),
+  1px 25px 35px rgba(16, 16,16,0.4),
+  1px 30px 60px rgba(16, 16,16,0.4);
+
+  /* background-color: rgba(13, 61, 194, 0.233); */
+}
+
+#hero .slogan h2 {
+  font-size: 5rem;
+}
+#hero .slogan h2 span {
+  /* font-size: larger; */
+  font-weight: 700;
+}
+
+@media screen and (max-width:1630px) {
+  #hero .slogan h2 {
+    font-size: 4rem;
   }
+  
+}
+
+@media screen and (max-width:630px) {
+  #hero .slogan h2 {
+    font-size: 3rem;
+  }
+  
 }
 
 #hero .hero-content .btn-get-started,
@@ -1680,20 +1722,7 @@ position: relative;
   fill: var(--color-logo);
 }
 
-.slogan h2 {
-  position: absolute;
-  top: 15%;
-  left: 5%;
-  text-transform: uppercase;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-style: italic;
-  background-color: rgba(13, 61, 194, 0.233);
-}
 
-#hero .slogan h2 span {
-  font-size: larger;
-  font-weight: 700;
-}
 
 * h2,
 * h3 {
@@ -2043,6 +2072,7 @@ th[scope=row] {
   border-radius: var(--border-radius-button);
   /* max-height: 700px; */
   transition: all 0.5s ease-in-out;
+  max-height:700px;
 }
 
 .gallery img:hover {
