--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -703,31 +703,34 @@ section {
 #about .about-img {
   overflow: hidden;
   display: flex;
+  position: relative;
+  top: 20%;
+  left: 0;
+  justify-content: center;
+  align-items: center;
 }
 
 #about .about-img img {
-  margin-left: 5px;
-  max-width: 95%;
-  height: auto;
-  margin-top: 30px;
-  z-index: 1;
+  position: absolute;
+  display: flex;
+  max-width: 100%;
+  /* height: auto; */
+  justify-content: center;
+  align-self: center;
+  margin: 5px;
+  padding: 10px;
 }
 
-/* .sunshine {
-  background-image: url(/images/logo\ with\ sunshine.jpg);
-  background-repeat: no-repeat;
-  background-position:center;
-  background-size: contain;
-} */
+.back-img {
+  opacity: 0.5;
+}
 
-@media (max-width: 1436px) and (min-width: 992px) {
-  #about .about-img img {
-    /* margin-top: 20px; */
-    max-width: 100%;
-    height: max-content;
-    margin-left: 1px;
-    display: flex;
-    align-self: center;
+@media (max-width: 1457px) and (min-width: 992px) {
+  .main-img {
+
+    width: 85%;
+
+
   }
 }
 
@@ -737,8 +740,8 @@ section {
   }
 
   #about .about-img img {
-    margin-left: 0;
-    padding-bottom: 30px; 
+
+    display: none;
   }
 
 }
@@ -1823,8 +1826,9 @@ position: relative;
 
 .bashky {
   width: 100%;
-  border-radius: 75% 25% 75% 25% / 25% 25% 25% 25%;
-  border: 10px solid var(--color-logo);
+  border-radius: 0 / 25% 25% 25% 25%; /* eger halamasan ashakdakyny aktiw etmeli muny pozmaly*/
+  /* border-radius: 75% 25% 75% 25% / 25% 25% 25% 25%;  kopyasy yokardakyn */ 
+  border: 10px solid var(--color-logo); /* border 5px 3px edibermeli barlap gormek ucin*/ 
   border-left: 0;
   border-right: 0;
   height: 250px;
@@ -2092,4 +2096,94 @@ th[scope=row] {
 .ramka {
   width:100%;
   border: 0.5px dotted rgba(128, 128, 128, 0.603); 
+}
+
+
+/* FIXME: wave barden duzlenyar */
+.hero-waves {
+  display: block;
+  width: 100%;
+  height: 60px;
+  position: relative;
+}
+
+.wave1 use {
+  -webkit-animation: move-forever1 10s linear infinite;
+  animation: move-forever1 10s linear infinite;
+  -webkit-animation-delay: -2s;
+  animation-delay: -2s;
+}
+
+.wave2 use {
+  -webkit-animation: move-forever2 8s linear infinite;
+  animation: move-forever2 8s linear infinite;
+  -webkit-animation-delay: -2s;
+  animation-delay: -2s;
+}
+
+.wave3 use {
+  -webkit-animation: move-forever3 6s linear infinite;
+  animation: move-forever3 6s linear infinite;
+  -webkit-animation-delay: -2s;
+  animation-delay: -2s;
+}
+
+@-webkit-keyframes move-forever1 {
+  0% {
+    transform: translate(85px, 0%);
+  }
+
+  100% {
+    transform: translate(-90px, 0%);
+  }
+}
+
+@keyframes move-forever1 {
+  0% {
+    transform: translate(85px, 0%);
+  }
+
+  100% {
+    transform: translate(-90px, 0%);
+  }
+}
+
+@-webkit-keyframes move-forever2 {
+  0% {
+    transform: translate(-90px, 0%);
+  }
+
+  100% {
+    transform: translate(85px, 0%);
+  }
+}
+
+@keyframes move-forever2 {
+  0% {
+    transform: translate(-90px, 0%);
+  }
+
+  100% {
+    transform: translate(85px, 0%);
+  }
+}
+
+@-webkit-keyframes move-forever3 {
+  0% {
+    transform: translate(-90px, 0%);
+  }
+
+  100% {
+    transform: translate(85px, 0%);
+  }
+}
+
+@keyframes move-forever3 {
+  0% {
+    transform: translate(-90px, 0%);
+  }
+
+  100% {
+    transform: translate(85px, 0%);
+  }
 }
