--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -900,11 +900,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #50d8af;
+  border: 1px solid var(--color-logo);
 }
 
 #clients .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #50d8af;
+  background-color: var(--color-logo);
 }
 
 /* Our Portfolio Section
@@ -2137,6 +2137,14 @@ th[scope=row] {
   position: relative;
 }
 
+.hero-waves-down {
+  display: block;
+  width: 100%;
+  height: 60px;
+  position: relative;
+}
+
+
 .wave1 use {
   -webkit-animation: move-forever1 10s linear infinite;
   animation: move-forever1 10s linear infinite;
@@ -2221,5 +2229,10 @@ th[scope=row] {
 .olimp {
 padding-right: 0px;
 padding-left: 0px;
-  height: 17rem;
+height: 17rem;
+/* width: 100%; */
+}
+
+.duzetmeli {
+  background-color: red;
 }
